# goit-pythonweb-hw-01

./: README.md  logger.py  pyproject.toml  task1.py  task2.py
