[tool.poetry]
name = "goit-pythonweb-hw-01"
version = "0.1.0"
description = "homework01"
authors = ["Sergey Shevchenko <sergiishevchenko017@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
